content: added content in types of cybersecurity, protective measures, future cyber threats

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 			<div class="grid md:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-y-8 max-w-6xl gap-4 mx-auto">
 				<div class="bg-[#141528] p-4 rounded text-white space-y-2 border border-indigo-900">
                     <h5 class="text-xl font-medium">Types of Vulnerabilities</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum maiores voluptatum magni quod mollitia dolorem molestias, aperiam ab iure. Corrupti at eum reiciendis nam mollitia cumque, cum error incidunt placeat.</p>
+                    <p>Welcome to our guide on the different types of vulnerabilities that can affect systems, applications, and networks. Understanding these weaknesses is crucial in building stronger defenses against cyber threats.</p>
                     <div>
                         <a href="#" class="px-4 py-1 rounded-full bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
                     </div>
@@ -311,15 +311,15 @@
 
                 <div class="bg-[#141528] p-4 rounded text-white space-y-2 border border-indigo-900">
                     <h5 class="text-xl font-medium">Protective Measures</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum maiores voluptatum magni quod mollitia dolorem molestias, aperiam ab iure. Corrupti at eum reiciendis nam mollitia cumque, cum error incidunt placeat.</p>
+                    <p>Welcome to the Protective Measures section. Here, you'll learn about both physical and software-based methods used to secure systems against various threats.</p>
                     <div>
                         <a href="#" class="px-4 py-1 rounded-full bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
                     </div>
                 </div>
 
                 <div class="bg-[#141528] p-4 rounded text-white space-y-2 border border-indigo-900">
-                    <h5 class="text-xl font-medium">Protective Measures</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum maiores voluptatum magni quod mollitia dolorem molestias, aperiam ab iure. Corrupti at eum reiciendis nam mollitia cumque, cum error incidunt placeat.</p>
+                    <h5 class="text-xl font-medium">Future Cyber Threats</h5>
+                    <p>Welcome to the Future Cyber Threats section. This part explores emerging risks in cybersecurity and how they may impact individuals, organizations, and technologies in the years to come.</p>
                     <div>
                         <a href="#" class="px-4 py-1 rounded-full bg-indigo-500 hover:bg-indigo-600 ease duration-200 mt-4">Learn More</a>
                     </div>
