change evolution of cyber, wannacry, physical protecttive

--- a/famous-cyber-attacks/wannacry-ransomware-attack.html
+++ b/famous-cyber-attacks/wannacry-ransomware-attack.html
@@ -291,8 +291,12 @@
 
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent via-black/40 to-black"></div>
 			<div class="relative max-w-4xl mx-auto mt-48">
-				<h4 class="text-6xl font-medium">Types of Vulnerabilities</h4>
-				<p class="mt-4">Explore the different types of system and application vulnerabilities that can impact security, privacy, and performance. Whether you're a beginner or a seasoned professional, this guide provides clear, accessible insights into common weaknesses.</p>
+				<h4 class="text-6xl font-medium">WannaCry Ransomaware Attack</h4>
+                <div class="flex items-center space-x-4 mt-4 justify-center">
+                    <a href="">Initial Discovery </a>
+                    <a href="">Common Early Exploits and Attacks</a>
+                    <a href="">The Development of Security Patching</a>
+                </div>
 			</div>
 		</div>
 		<div class="bg-gradient-to-b from-black to-zinc-900 text-justify">
