--- a/concept-of-cybersecurity/prominent-hackers.html
+++ b/concept-of-cybersecurity/prominent-hackers.html
@@ -5,10 +5,9 @@
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
 		<title>Tailwind</title>
 		<script src='https://cdn.tailwindcss.com'></script>
-		<link rel="stylesheet" href="assets/css/fonts.css">
+		<link rel="stylesheet" href="../assets/css/fonts.css">
 	</head>
 	<body class="text-white text-roboto">
-		<!-- NAVIGATION -->
 		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('../assets/hero-bg.jpg')] bg-cover bg-center bg-no-repeat relative">
             <nav class="w-full p-4 flex items-center justify-between">
                 <div class="flex items-center space-x-4 md:w-auto w-full justify-between">
@@ -31,12 +30,12 @@
                 </ul>
             </nav>
 
-			<div class="absolute inset-0 bg-gradient-to-b from-transparent to-[#191A2E]"></div>
+			<div class="absolute inset-0 bg-gradient-to-b from-transparent to-black"></div>
 			<div class="relative max-w-4xl mx-auto mt-48">
-				<h4 class="text-6xl font-medium">Prominent Ethical Hackers and Experts</h4>
+				<h4 class="text-6xl font-medium"><span>Prominent</span> Ehical Hackers and Experts</h4>
 			</div>
 		</div>
-		<div class="bg-[#191A2E]">
+		<div class="bg-gradient-to-b from-black to-zinc-900 pt-24 space-y-6 px-2">
 			<div class="grid md:grid-cols-3 grid-cols-1 gap-4 container mx-auto py-16">
 
 
@@ -144,9 +143,8 @@
 			</div>
 		</div>
 		
-		
 
-		<footer class="text-white w-full p-4 pt-24 bg-[#191A2E]">
+		<footer class="text-white w-full p-4 pt-24 bg-zinc-900">
             <div class="max-w-7xl mx-auto border p-6 border-zinc-700 bg-zinc-800 rounded md:flex block justify-between">
                 <div>
                     <div class="flex items-center space-x-4">
