--- a/famous-cyber-attacks/wannacry-ransomware-attack.html
+++ b/famous-cyber-attacks/wannacry-ransomware-attack.html
@@ -299,7 +299,7 @@
                 </div>
 			</div>
 		</div>
-		<div class="bg-gradient-to-b from-black to-zinc-900 text-justify">
+		<div class="bg-gradient-to-b from-black to-[#141528] text-justify">
 			<div class="max-w-6xl mx-auto px-6 py-32 space-y-4">
                 <div class="space-y-4">
                     <h4 class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
@@ -312,19 +312,19 @@
                 <div class="space-y-4">
                     <h4 class="font-medium text-2xl text-[#E2C8F1]">Impact and Consequences</h4>
                     <div class="grid grid-cols-2 gap-4">
-                        <div class="p-5 bg-[#111436] outline outline-1 outline-white rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
                             <h6 class="font-medium text-lg">Impact 1</h6>
                             <p>The United Kingdom's National Health Service (NHS) was one of the hardest-hit organizations, leading to canceled surgeries and diverted ambulances. Critical medical equipment and patient records became inaccessible, creating a national healthcare emergency. It exposed serious cybersecurity weaknesses within essential public infrastructure.</p>
                         </div>
-                        <div class="p-5 bg-[#111436] outline outline-1 outline-white rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
                             <h6 class="font-medium text-lg">Impact 2</h6>
                             <p>Global businesses such as FedEx and Renault also suffered major disruptions. FedEx reported widespread system outages, severely impacting logistics and delivery operations. Renault had to temporarily halt manufacturing at several plants to contain the spread of the ransomware.</p>
                         </div>
-                        <div class="p-5 bg-[#111436] outline outline-1 outline-white rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
                             <h6 class="font-medium text-lg">Impact 3</h6>
                             <p>The total economic damages from WannaCry were estimated to be between $4 billion and $8 billion globally. Many small and medium-sized businesses lacked the resources to recover quickly from the attack. This economic shockwave led companies to reassess their investment in cybersecurity preparedness.</p>
                         </div>
-                        <div class="p-5 bg-[#111436] outline outline-1 outline-white rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
                             <h6 class="font-medium text-lg">Impact 4</h6>
                             <p>Governments worldwide initiated urgent cybersecurity reviews after the WannaCry attack. New policies were created to improve the speed of critical patches and encourage better cooperation between the private sector and government agencies. It also reignited debates about the responsibility of intelligence agencies in securing or disclosing cyber vulnerabilities.</p>
                         </div>
@@ -334,8 +334,8 @@
 		</div>
 		
 
-		<footer class="text-white w-full p-4 pt-24 bg-zinc-900">
-            <div class="max-w-7xl mx-auto border p-6 border-zinc-700 bg-zinc-800 rounded md:flex block justify-between">
+		<footer class="text-white w-full p-4 pt-24 bg-[#141528]">
+            <div class="max-w-7xl mx-auto border p-6 bg-[#141538]/80 border-indigo-900/50 rounded md:flex block justify-between">
                 <div>
                     <div class="flex items-center space-x-4">
                         <img src="../assets/logo.png" class="h-10 w-10" alt="Logo" />
