--- a/famous-cyber-attacks/not-petya.html
+++ b/famous-cyber-attacks/not-petya.html
@@ -291,7 +291,7 @@
 
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent via-black/40 to-black"></div>
 			<div class="relative max-w-4xl mx-auto mt-48">
-				<h4 class="text-6xl font-medium">LockBit Ransomware</h4>
+				<h4 class="text-6xl font-medium">Notpetya Ransomware Outbreak</h4>
                 <div class="flex items-center space-x-4 mt-4 justify-center">
                     <a href="">Initial Discovery </a>
                     <a href="">Common Early Exploits and Attacks</a>
@@ -303,13 +303,13 @@
 			<div class="max-w-6xl mx-auto px-6 py-32 space-y-4">
                 <div class="space-y-4">
                     <h4 class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
-                    <p>LockBit ransomware attacks first emerged in 2020 and have rapidly become one of the most dominant ransomware threats globally. The group operates a Ransomware-as-a-Service (RaaS) model, enabling affiliates to launch attacks using LockBit's tools. LockBit is known for its fast encryption speeds and double extortion tactics, where data is both encrypted and stolen. The group has targeted various sectors, including healthcare, manufacturing, education, and government. LockBit consistently updates its malware, releasing new versions like LockBit 2.0, 3.0, and LockBit Black. Their attacks often include threats to leak data unless ransom demands are met. Despite law enforcement crackdowns, LockBit remains highly active as of 2025. It continues to be a major player in the global ransomware ecosystem.
+                    <p>On June 27, 2017, the NotPetya ransomware outbreak occurred, causing major damage to infrastructure and companies across the globe. Organizations in Ukraine, including banks, telecom providers, and energy corporations, were the main targets of the attack. However, the impact was seen globally as well because multinational corporations like Maersk and Rosneft were also compromised. Later, it was discovered that NotPetya was a harmful wiper disguising as ransomware. The infection made systems unusable and encrypted data, making it impossible to recover the data. It propagated quickly throughout networks by taking advantage of several strategies. The attack resulted in significant financial damages and forced businesses to stop operations. When it comes to the disruption of worldwide operations, this cyberattack is regarded as one of the most catastrophic.
 
                     </p>
                 </div>
                 <div class="space-y-4">
                     <h4 class="font-medium text-2xl text-[#E2C8F1]">Method of Attack</h4>
-                    <p>LockBit affiliates often use phishing emails, exposed Remote Desktop Protocol (RDP) servers, or stolen credentials to access networks. Once inside, they move laterally and deploy the ransomware payload to encrypt critical systems. The malware uses strong encryption algorithms and can automate parts of the attack to maximize damage quickly. LockBit operators also steal sensitive data before encryption for additional leverage. Their approach combines both ransomware and data exfiltration threats.
+                    <p>NotPetya infected systems by overwriting the Master Boot Record (MBR) with malicious code that triggered upon reboot. It initially spread through a compromised software update from MeDoc, a Ukrainian accounting software vendor. After infecting a machine, it harvested admin credentials to move laterally using tools like PSEXEC and WMI. It also exploited the EternalBlue vulnerability internally, but not across the internet. The ransomware-like message demanded payment in Bitcoin, but recovery was impossible as the communication email was disabled. Analysts concluded it was a wiper disguised as ransomware, aiming more for disruption than profit.
                     </p>
                 </div>
                 <div class="space-y-4">
@@ -317,20 +317,20 @@
                     <div class="grid grid-cols-2 gap-4">
                         <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
                             <h6 class="font-medium text-lg">Impact 1</h6>
-                            <p>Healthcare institutions targeted by LockBit faced life-threatening service interruptions. Hospitals had to cancel surgeries and reroute emergency patients due to locked systems. This demonstrated the devastating impact of ransomware on critical infrastructure.</p>
+                            <p>Significant operating difficulties were suffered by the multinational maritime company A.P. Moller-Maersk. Operations at ports and terminals on several continents had to be halted. Later, the business revealed that the hack had cost it up to $300 million.</p>
                         </div>
                         <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
                             <h6 class="font-medium text-lg">Impact 2</h6>
-                            <p>Businesses attacked by LockBit experienced massive operational downtime and ransom demands reaching millions of dollars. Many organizations faced public relations crises after data leaks. Some companies went bankrupt following unsuccessful recovery efforts.
+                            <p>Many banks and businesses, including supermarkets and automated teller machines, were forced offline in Ukraine. Consumers couldn't buy essentials or access financial services. Significant economic disruption and public annoyance resulted from this.
                             </p>
                         </div>
                         <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
                             <h6 class="font-medium text-lg">Impact 3</h6>
-                            <p>LockBit's success has encouraged the growth of the RaaS model in the cybercriminal ecosystem. More amateur hackers now have access to sophisticated ransomware tools. This has led to an overall increase in the frequency of ransomware attacks worldwide.</p>
+                            <p>The malware was also believed to have affected Russia's major oil corporation, Rosneft. Internal systems were still affected, even though the business stated that operations continued because of a backup system. The attack raised worries about the weaknesses in the country's infrastructure.</p>
                         </div>
                         <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
                             <h6 class="font-medium text-lg">Impact 4</h6>
-                            <p>Law enforcement agencies like the FBI and Europol have launched major crackdowns against LockBit affiliates. Some affiliates have been arrested, and LockBit’s infrastructure has been temporarily disrupted. However, the group's decentralized model allows it to recover and rebrand quickly.
+                            <p>The attack brought to light the dangers of supply chain cybersecurity flaws. The main source of infection was the hacked update from MeDoc. The importance of secure software development and updating procedures was highlighted by this incident.
 
                             </p>
                         </div>
