--- a/famous-cyber-attacks/pegasus-spyware.html
+++ b/famous-cyber-attacks/pegasus-spyware.html
@@ -291,7 +291,7 @@
 
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent via-black/40 to-black"></div>
 			<div class="relative max-w-4xl mx-auto mt-48">
-				<h4 class="text-6xl font-medium">LockBit Ransomware</h4>
+				<h4 class="text-6xl font-medium">Pegasus Spyware</h4>
                 <div class="flex items-center space-x-4 mt-4 justify-center">
                     <a href="">Initial Discovery </a>
                     <a href="">Common Early Exploits and Attacks</a>
@@ -303,13 +303,12 @@
 			<div class="max-w-6xl mx-auto px-6 py-32 space-y-4">
                 <div class="space-y-4">
                     <h4 class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
-                    <p>LockBit ransomware attacks first emerged in 2020 and have rapidly become one of the most dominant ransomware threats globally. The group operates a Ransomware-as-a-Service (RaaS) model, enabling affiliates to launch attacks using LockBit's tools. LockBit is known for its fast encryption speeds and double extortion tactics, where data is both encrypted and stolen. The group has targeted various sectors, including healthcare, manufacturing, education, and government. LockBit consistently updates its malware, releasing new versions like LockBit 2.0, 3.0, and LockBit Black. Their attacks often include threats to leak data unless ransom demands are met. Despite law enforcement crackdowns, LockBit remains highly active as of 2025. It continues to be a major player in the global ransomware ecosystem.
-
+                    <p>A worldwide scandal, the Pegasus spyware show included the illegal monitoring of government officials, journalists, activists, and politicians. It was found in 2016 after a cybersecurity lab received a suspicious communication from a human rights activist in the United Arab Emirates. The attacks happened all across the world, including in the US, Mexico, Saudi Arabia, and France. Without user intervention, Pegasus could infect devices running Symbian, Android, iOS, BlackBerry, and Windows Phone. The Israeli business that created Pegasus, NSO Group, claimed that it only supplied government organizations with the spyware to combat terrorism and criminal activity. However, it was discovered that many democratic and authoritarian governments used it against critics and dissidents. Each installation of the spyware cost hundreds of thousands of dollars. 
                     </p>
                 </div>
                 <div class="space-y-4">
                     <h4 class="font-medium text-2xl text-[#E2C8F1]">Method of Attack</h4>
-                    <p>LockBit affiliates often use phishing emails, exposed Remote Desktop Protocol (RDP) servers, or stolen credentials to access networks. Once inside, they move laterally and deploy the ransomware payload to encrypt critical systems. The malware uses strong encryption algorithms and can automate parts of the attack to maximize damage quickly. LockBit operators also steal sensitive data before encryption for additional leverage. Their approach combines both ransomware and data exfiltration threats.
+                    <p>Pegasus used "zero-click" exploits to infect devices, which meant that users didn't have to interact with the malware in order to get infected. Attackers installed Pegasus secretly on victims' phones by taking advantage of flaws in apps like WhatsApp. Once inside, the spyware rooted Android devices or jailbroken iPhones to get around security measures. Pegasus provided complete access to encrypted data, cameras, microphones, conversations, and texts. Attackers used social engineering techniques, such as phony communications, to tempt users if zero-click failed.
                     </p>
                 </div>
                 <div class="space-y-4">
@@ -317,20 +316,20 @@
                     <div class="grid grid-cols-2 gap-4">
                         <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
                             <h6 class="font-medium text-lg">Impact 1</h6>
-                            <p>Healthcare institutions targeted by LockBit faced life-threatening service interruptions. Hospitals had to cancel surgeries and reroute emergency patients due to locked systems. This demonstrated the devastating impact of ransomware on critical infrastructure.</p>
+                            <p>Journalists and human rights advocates were seriously threatened and some experienced harassment or worse as a result of surveillance. Dissidents' right to privacy was violated when private information about them was gathered without their consent. This weakened international campaigns to defend free expression and human rights.</p>
                         </div>
                         <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
                             <h6 class="font-medium text-lg">Impact 2</h6>
-                            <p>Businesses attacked by LockBit experienced massive operational downtime and ransom demands reaching millions of dollars. Many organizations faced public relations crises after data leaks. Some companies went bankrupt following unsuccessful recovery efforts.
+                            <p>By abusing Pegasus to spy on political rivals, governments harmed democratic institutions. Because of this, there was mistrust between the people and their governments, which resulted in political instability. The use of spying technology in governance also brought up ethical issues.
                             </p>
                         </div>
                         <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
                             <h6 class="font-medium text-lg">Impact 3</h6>
-                            <p>LockBit's success has encouraged the growth of the RaaS model in the cybercriminal ecosystem. More amateur hackers now have access to sophisticated ransomware tools. This has led to an overall increase in the frequency of ransomware attacks worldwide.</p>
+                            <p>In an effort to stop the abuse of Pegasus, tech giants including Apple and Facebook filed a lawsuit against NSO Group. The lawsuits brought widely used platforms' cybersecurity flaws to light. In order to shield consumers from similar risks, they also encouraged businesses to improve technology security.</p>
                         </div>
                         <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
                             <h6 class="font-medium text-lg">Impact 4</h6>
-                            <p>Law enforcement agencies like the FBI and Europol have launched major crackdowns against LockBit affiliates. Some affiliates have been arrested, and LockBit’s infrastructure has been temporarily disrupted. However, the group's decentralized model allows it to recover and rebrand quickly.
+                            <p>NSO Group was placed on a blacklist by the US government, which prevented US companies from doing business with them. The extent of Pegasus's threat to national security was demonstrated by this action. It also established a standard for how governments might respond to tech firms that are claimed to have violated human rights.
 
                             </p>
                         </div>
