--- a/famous-cyber-attacks/2016-comelec-data-breach.html
+++ b/famous-cyber-attacks/2016-comelec-data-breach.html
@@ -291,7 +291,7 @@
 
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent via-black/40 to-black"></div>
 			<div class="relative max-w-4xl mx-auto mt-48">
-				<h4 class="text-6xl font-medium">LockBit Ransomware</h4>
+				<h4 class="text-6xl font-medium">2016 COMELEC Data Breach</h4>
                 <div class="flex items-center space-x-4 mt-4 justify-center">
                     <a href="">Initial Discovery </a>
                     <a href="">Common Early Exploits and Attacks</a>
@@ -303,13 +303,12 @@
 			<div class="max-w-6xl mx-auto px-6 py-32 space-y-4">
                 <div class="space-y-4">
                     <h4 class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
-                    <p>LockBit ransomware attacks first emerged in 2020 and have rapidly become one of the most dominant ransomware threats globally. The group operates a Ransomware-as-a-Service (RaaS) model, enabling affiliates to launch attacks using LockBit's tools. LockBit is known for its fast encryption speeds and double extortion tactics, where data is both encrypted and stolen. The group has targeted various sectors, including healthcare, manufacturing, education, and government. LockBit consistently updates its malware, releasing new versions like LockBit 2.0, 3.0, and LockBit Black. Their attacks often include threats to leak data unless ransom demands are met. Despite law enforcement crackdowns, LockBit remains highly active as of 2025. It continues to be a major player in the global ransomware ecosystem.
-
+                    <p>The Philippines' Commission on Elections (COMELEC) experienced a massive data breach in March 2016. Hackers gained access to the database holding the personal data of approximately 55 million registered voters by taking advantage of flaws in the COMELEC website. The hacking organization "LulzSec Pilipinas," which conducted out the attack, posted some of the stolen material online. Full names, residences, dates of birth, and passport numbers were among the personal information that was made public. This turned into one of the biggest data breaches ever involving the government. It brought out major problems with Philippine government agencies' cybersecurity standards. The trust of the public in the electoral system was severely harmed by the breach. Millions of dollars were spent by COMELEC to control the incident's consequences.
                     </p>
                 </div>
                 <div class="space-y-4">
                     <h4 class="font-medium text-2xl text-[#E2C8F1]">Method of Attack</h4>
-                    <p>LockBit affiliates often use phishing emails, exposed Remote Desktop Protocol (RDP) servers, or stolen credentials to access networks. Once inside, they move laterally and deploy the ransomware payload to encrypt critical systems. The malware uses strong encryption algorithms and can automate parts of the attack to maximize damage quickly. LockBit operators also steal sensitive data before encryption for additional leverage. Their approach combines both ransomware and data exfiltration threats.
+                    <p>To take advantage of vulnerabilities in the COMELEC website, the attackers employed SQL injection techniques. They obtained sensitive voter data by manipulating the website's database through the injection of malicious SQL queries. Outdated software, poor passwords, and improper data encryption all contributed to the system's breach. Hackers were successful in extracting and later exposing the personal information of millions of voters. If left unchecked, SQL injection is a dangerous web application vulnerability that can result in significant data breaches.
                     </p>
                 </div>
                 <div class="space-y-4">
@@ -317,21 +316,20 @@
                     <div class="grid grid-cols-2 gap-4">
                         <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
                             <h6 class="font-medium text-lg">Impact 1</h6>
-                            <p>Healthcare institutions targeted by LockBit faced life-threatening service interruptions. Hospitals had to cancel surgeries and reroute emergency patients due to locked systems. This demonstrated the devastating impact of ransomware on critical infrastructure.</p>
+                            <p>55 million voters' personal information was compromised, making them vulnerable to fraud and identity theft. Many affected people were afraid that their data will be exploited for several types of cybercrimes. The risk of phishing and scams increased when passport numbers and addresses were made public.</p>
                         </div>
                         <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
                             <h6 class="font-medium text-lg">Impact 2</h6>
-                            <p>Businesses attacked by LockBit experienced massive operational downtime and ransom demands reaching millions of dollars. Many organizations faced public relations crises after data leaks. Some companies went bankrupt following unsuccessful recovery efforts.
+                            <p>Political criticism of COMELEC officials for their carelessness and lack of cybersecurity preparedness resulted from the incident. Following the public protest, a number of officials were called to resign and faced legal prosecution. This triggered a wider demand for improved data security protocols in all branches of government.
                             </p>
                         </div>
                         <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
                             <h6 class="font-medium text-lg">Impact 3</h6>
-                            <p>LockBit's success has encouraged the growth of the RaaS model in the cybercriminal ecosystem. More amateur hackers now have access to sophisticated ransomware tools. This has led to an overall increase in the frequency of ransomware attacks worldwide.</p>
+                            <p>The scale of the breach caused international embarrassment for the Philippine government. The legitimacy of the 2016 elections and subsequent elections was impacted by a decrease in confidence in COMELEC. It highlighted how crucial cybersecurity is to maintaining national security.</p>
                         </div>
                         <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
                             <h6 class="font-medium text-lg">Impact 4</h6>
-                            <p>Law enforcement agencies like the FBI and Europol have launched major crackdowns against LockBit affiliates. Some affiliates have been arrested, and LockBit’s infrastructure has been temporarily disrupted. However, the group's decentralized model allows it to recover and rebrand quickly.
-
+                            <p>PHP 1.2 billion (USD 23 million) had to be spent by COMELEC on victim assistance, investigations, and system updates. By selling the stolen data on the dark web, hackers might have made millions of dollars. The incident made clear that fast cybersecurity infrastructure and procedures need to be changed.
                             </p>
                         </div>
                     </div>
