--- a/famous-cyber-attacks/the-aws-ddos-attack.html
+++ b/famous-cyber-attacks/the-aws-ddos-attack.html
@@ -291,7 +291,7 @@
 
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent via-black/40 to-black"></div>
 			<div class="relative max-w-4xl mx-auto mt-48">
-				<h4 class="text-6xl font-medium">LockBit Ransomware</h4>
+				<h4 class="text-6xl font-medium">The AWS DDoS Attack</h4>
                 <div class="flex items-center space-x-4 mt-4 justify-center">
                     <a href="">Initial Discovery </a>
                     <a href="">Common Early Exploits and Attacks</a>
@@ -303,13 +303,12 @@
 			<div class="max-w-6xl mx-auto px-6 py-32 space-y-4">
                 <div class="space-y-4">
                     <h4 class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
-                    <p>LockBit ransomware attacks first emerged in 2020 and have rapidly become one of the most dominant ransomware threats globally. The group operates a Ransomware-as-a-Service (RaaS) model, enabling affiliates to launch attacks using LockBit's tools. LockBit is known for its fast encryption speeds and double extortion tactics, where data is both encrypted and stolen. The group has targeted various sectors, including healthcare, manufacturing, education, and government. LockBit consistently updates its malware, releasing new versions like LockBit 2.0, 3.0, and LockBit Black. Their attacks often include threats to leak data unless ransom demands are met. Despite law enforcement crackdowns, LockBit remains highly active as of 2025. It continues to be a major player in the global ransomware ecosystem.
-
+                    <p>The biggest Distributed Denial of Service (DDoS) attack ever recorded occurred against Amazon Web Services (AWS) in Q1 2020, with a speed of 2.3 Tbps. The attack broke the previous record set by GitHub's DDoS attack in 2018 and was made public by AWS. This major cyber incident brought to light the increasing strength and danger present-day DDoS attacks. It demonstrated the need for corporations to constantly improve their defenses against changing threats. Although the hack primarily targeted AWS's cloud infrastructure, it affected users globally. It was the biggest attack ever made public, but it wasn't the biggest attack ever (based on other private reports). The event reaffirmed how crucial it is for cybersecurity to embrace a Zero-Trust mindset.
                     </p>
                 </div>
                 <div class="space-y-4">
                     <h4 class="font-medium text-2xl text-[#E2C8F1]">Method of Attack</h4>
-                    <p>LockBit affiliates often use phishing emails, exposed Remote Desktop Protocol (RDP) servers, or stolen credentials to access networks. Once inside, they move laterally and deploy the ransomware payload to encrypt critical systems. The malware uses strong encryption algorithms and can automate parts of the attack to maximize damage quickly. LockBit operators also steal sensitive data before encryption for additional leverage. Their approach combines both ransomware and data exfiltration threats.
+                    <p>A CLDAP (Connection-less Lightweight Directory Access Protocol) reflection and amplification attack was used to breach the AWS system. Attackers greatly increased their traffic against AWS servers by using open and unsecured CLDAP servers. Attackers were able to increase the amount of their first attack requests by up to 56–70 times using this technique. Since CLDAP servers answered fake queries, it was challenging to identify the actual attackers. A reflection/amplification DDoS assault that took advantage of UDP flaws was the main threat employed.
                     </p>
                 </div>
                 <div class="space-y-4">
@@ -317,20 +316,20 @@
                     <div class="grid grid-cols-2 gap-4">
                         <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
                             <h6 class="font-medium text-lg">Impact 1</h6>
-                            <p>Healthcare institutions targeted by LockBit faced life-threatening service interruptions. Hospitals had to cancel surgeries and reroute emergency patients due to locked systems. This demonstrated the devastating impact of ransomware on critical infrastructure.</p>
+                            <p>To handle the massive assault flow, AWS has to implement extensive DDoS prevention measures.The attack tested AWS's defenses to the breaking point in the first quarter of 2020. Despite the size, AWS was able to keep its customers from experiencing significant service interruptions.</p>
                         </div>
                         <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
                             <h6 class="font-medium text-lg">Impact 2</h6>
-                            <p>Businesses attacked by LockBit experienced massive operational downtime and ransom demands reaching millions of dollars. Many organizations faced public relations crises after data leaks. Some companies went bankrupt following unsuccessful recovery efforts.
+                            <p>The attack made cloud service providers realize how important it is to have strong DDoS defenses. Businesses using AWS to host their services become more aware of their shared security responsibilities. It highlighted how important it is for businesses to tighten cloud setups.
                             </p>
                         </div>
                         <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
                             <h6 class="font-medium text-lg">Impact 3</h6>
-                            <p>LockBit's success has encouraged the growth of the RaaS model in the cybercriminal ecosystem. More amateur hackers now have access to sophisticated ransomware tools. This has led to an overall increase in the frequency of ransomware attacks worldwide.</p>
+                            <p>The event helped the cybersecurity community understand how the DDoS threat scenario is changing. Following the incident, reports and studies have been published to look into the vulnerabilities that were exploited. Since then, cybersecurity techniques have shifted their emphasis to recognizing and preventing reflection and amplification threats.</p>
                         </div>
                         <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
                             <h6 class="font-medium text-lg">Impact 4</h6>
-                            <p>Law enforcement agencies like the FBI and Europol have launched major crackdowns against LockBit affiliates. Some affiliates have been arrested, and LockBit’s infrastructure has been temporarily disrupted. However, the group's decentralized model allows it to recover and rebrand quickly.
+                            <p>The importance of implementing a Zero-Trust strategy for network security has been highlighted by AWS and security researchers. The attack demonstrated how even little protocol flaws, such as CLDAP, might be turned into weapons. It encouraged improvements and enhancements in AI-powered, automated DDoS defense systems.
 
                             </p>
                         </div>
